objects/SMAX_PS_AutoFieldMapping__mdt.object
<CustomObject>
    <label>Auto Field Mapping</label>
    <pluralLabel>Auto Field Mappings</pluralLabel>
    <fields>
        <fullName>SMAX_PS_SObject__c</fullName>
        <label>SObject</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Picklist_Code_Mappings</relationshipLabel>
        <relationshipName>Picklist_Code_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SourceField__c</fullName>
        <label>Source Field</label>
        <metadataRelationshipControllingField>SMAX_PS_AutoFieldMapping__mdt.SMAX_PS_SObject__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Field_Mappings_Source</relationshipLabel>
        <relationshipName>Field_Mappings_Source</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SourceValue__c</fullName>
        <label>Source Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TargetField__c</fullName>
        <label>Target Field</label>
        <metadataRelationshipControllingField>SMAX_PS_AutoFieldMapping__mdt.SMAX_PS_SObject__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Field_Mappings_Target</relationshipLabel>
        <relationshipName>Field_Mappings_Target</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TargetValue__c</fullName>
        <label>Target Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>